# camera_ftp

./: .env  .gitignore  Dockerfile  config.sample.jsonc  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
configs/: config.jsonc  config.sample.jsonc
src/app/: cli.py  settings.py
src/app/config/: models.py
src/app/ftp/: server.py
src/app/processing/: decode_raw.py  encode.py  matcher.py  pipeline.py
src/app/queue/: celery_app.py  tasks.py
src/cameraftp/: __init__.py  __main__.py  cli.py  logging_config.py
src/cameraftp/config/: env.py  loader.py  models.py
src/cameraftp/processing/: __init__.py  decode_image.py  decode_raw.py  encode.py  magick.py  matcher.py  pipeline.py
src/cameraftp/queue/: tasks.py
src/photoftp/: __init__.py  __main__.py  cli.py
src/photoftp/config/: env.py  models.py
src/photoftp/ftp/: server.py
src/photoftp/processing/: decode_image.py  decode_raw.py  encode.py  matcher.py  pipeline.py  placeholder.py
src/photoftp/queue/: tasks.py
